# simply_clang_plugin

./: CMakeLists.txt  README.md  build.sh  clang_format.sh
